clang/test/BSC/Negative/Constexpr/constexpr_variable_and_function/constexpr_variable_and_function.cbs
// RUN: %clang_cc1 -verify %s

constexpr int foo1() {
    return 1;
}

constexpr int foo2<T>() {
    return 1;
}

int foo3() {
    return 1;
}

trait M {
    constexpr int foo(This* this);
};
constexpr int int::foo(This* this) {
    return *this;
}
impl trait M for int;

struct S {
    int a;
};

int main() {
    constexpr int a = 5;   // expected-note {{variable 'a' declared const here}}
    a = 6;    // expected-error {{cannot assign to variable 'a' with const-qualified type 'const int'}}
    
    constexpr struct S s = {.a = 5};  // expected-note {{variable 's' declared const here}}
    s.a = 4;  // expected-error {{cannot assign to variable 's' with const-qualified type 'const struct S'}}

    _Static_assert(a == 5, "fail");
    _Static_assert(foo1() == 1, "fail");
    _Static_assert(foo1() == 2, "fail");    // expected-error {{static assertion failed due to requirement 'foo1() == 2': fail}}
    _Static_assert(foo2<int>() == 1, "fail");
    _Static_assert(foo3() == 1, "fail");   // expected-error {{static assertion expression is not an integral constant expression}}
    
    int e = 5;
    trait M* p = &e;
    _Static_assert(e.foo() == 5, "fail");   // expected-error {{static assertion expression is not an integral constant expression}}
    _Static_assert(p->foo() == 5, "fail");   // expected-error {{static assertion expression is not an integral constant expression}}
    return 0;
}

